tests/neg/named-tuples-2.check
-- [E029] Pattern Match Exhaustivity Warning: tests/neg/named-tuples-2.scala:3:2 ---------------------------------------
3 |  person match // warn
  |  ^^^^^^
  |  match may not be exhaustive.
  |
  |  It would fail on pattern case: (_, _, _)
  |
  | longer explanation available when compiling with `-explain`
-- [E030] Match case Unreachable Error: tests/neg/named-tuples-2.scala:4:9 ---------------------------------------------
4 |    case (name, age) => () // error
  |         ^
  |         Unreachable case
  |
  | longer explanation available when compiling with `-explain`
-- [E030] Match case Unreachable Error: tests/neg/named-tuples-2.scala:5:9 ---------------------------------------------
5 |    case (n, a, m, x) => () // error
  |         ^
  |         Unreachable case
  |
  | longer explanation available when compiling with `-explain`
